# google-s2-geometry

./: CMakeLists.txt  README.md
geometry/: s2.cc  s2polygon.cc
geometry/base/: commandlineflags.h
